samples/_failures_safe/1761126484_5e3cc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_595eaa3a.c: In function ‘main’:
./samples/SAFE/__tmp_595eaa3a.c:163:5: error: expected expression at end of input
  163 |     print_matrix(&
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_595eaa3a.c:163:5: error: expected declaration or statement at end of input
